jpa entities and repositories